modified: wrapper class

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@
 
 @layer components {
   .wrapper {
-    @apply mx-auto max-w-[1134px] px-4;
+    @apply mx-auto max-w-7xl px-4 xl:px-0;
   }
 
   .font-body-large {
