--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,10 @@
     @apply mx-auto max-w-7xl px-4 xl:px-0;
   }
 
+  .line {
+    @apply h-px bg-black;
+  }
+
   .font-body-large {
     @apply text-base font-bold;
   }
